@@ -17,8 +17,8 @@
 	<dependencies>
 		<!-- MySQL Connector -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.33</version>
 		</dependency>
 
@@ -90,10 +90,10 @@
 				<version>0.0.8</version>
 				<configuration>
 					<mainClass>com.carrental.MainApp</mainClass>
-					<jvmArgs>
-						--add-modules
-						javafx.controls,javafx.fxml,javafx.graphics,javafx.base
-					</jvmArgs>
+					<options>
+						<option>
+							--add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.base</option>
+					</options>
 				</configuration>
 				<executions>
 					<execution>
@@ -131,6 +131,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
+				</configuration>
 			</plugin>
 
 			<!-- Code Coverage Plugin -->
